todo-demo/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: todo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo
spec:
  hosts:
  - "*"
  gateways:
  - todo-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: todo-ui
        port:
          number: 3000
